tests/snapshots/template_fidelity__myapp_bug-foo.snap
---
source: tests/template_fidelity.rs
expression: actual
---
[list.url]
http://localhost:12511
[pre-start.0.envrc]
cat > .envrc.local <<'ENVRC'
export MYAPP_POSTGRES_PORT=18094
export MYAPP_POSTGRES_CONTAINER_NAME="myapp-bug-foo-postgres"
export MYAPP_POSTGRES_VOLUME_NAME="myapp-bug-foo-pgdata"
export PORT=12511
ENVRC
[pre-start.0.direnv]
direnv allow .
[pre-start.0.mise]
command -v mise >/dev/null 2>&1 && mise trust
[pre-start.1.db-start]
direnv exec . make db-start
[pre-start.2.db-setup]
direnv exec . make db-setup
[pre-remove.0.db-stop]
docker stop myapp-bug-foo-postgres 2>/dev/null || true
[pre-remove.1.db-rm]
docker rm myapp-bug-foo-postgres 2>/dev/null || true
[pre-remove.2.db-vol]
docker volume rm myapp-bug-foo-pgdata 2>/dev/null || true
